Fix Info text overflow

--- a/src/app/[shortCode]/_components/overlay/Info.module.css
+++ b/src/app/[shortCode]/_components/overlay/Info.module.css
@@ -21,6 +21,7 @@
 
 .workInfo {
   flex-grow: 1;
+  overflow: hidden; /* Включаем ограничение содержимого */
 }
 
 .menuButton {
